--- a/style.css
+++ b/style.css
@@ -977,7 +977,6 @@ img.alignright,
   clear: both;
   line-height: 1;
   width: 100%;
-  height: 48px;
   border: 1px solid #CCC;
   overflow: hidden;
 }
@@ -985,10 +984,11 @@ img.alignright,
 .genesis-nav-menu .menu-item {
 	display: inline-block;
 	text-align: left;
+	clear: left;
 }
 
 .genesis-nav-menu a {
-  font-size: 16px;
+  font-size: 14px;
   color: #777;
   text-transform: uppercase;
   height: 30px;
@@ -1017,11 +1017,9 @@ img.alignright,
 .genesis-nav-menu .sub-menu a {
 	background-color: #fff;
 	border: 1px solid #eee;
-	border-top: none;
 	font-size: 14px;
-	padding: 20px;
+	padding: 20px 40px;
 	position: relative;
-	width: auto;
 }
 
 .sub-menu li {
@@ -1040,12 +1038,13 @@ img.alignright,
 }
 
 .genesis-nav-menu .menu-item:hover > .sub-menu {
-	left: auto;
-	opacity: 1;
+  left: auto;
+  opacity: 1;
 }
 
 .genesis-nav-menu > .first > a {
 	padding-left: 0;
+  color: #999;
 }
 
 .genesis-nav-menu > .last > a {
@@ -1100,14 +1099,13 @@ img.alignright,
 }
 
 .nav-primary .genesis-nav-menu a {
-  font-size: 16px;
   color: #777;
   text-transform: uppercase;
 }
 
 .nav-primary .genesis-nav-menu .sub-menu a {
   font-size: 16px;
-  color: #333;
+  color: #898989;
 }
 
 .nav-primary .genesis-nav-menu a:hover,
@@ -1313,6 +1311,31 @@ li.comment {
 	background-color: #fff;
 	margin-bottom: 40px;
 	padding: 40px;
+}
+
+
+/* Portfolio Styles
+-----------------------------------------------------------------------------------------------------*/
+.archive h1.entry-title {
+  text-align: center;
+  font-size: 16px;
+  color: #c2c2c2;
+}
+
+.archive a {
+  color: #C2C2C2;
+}
+
+.type-portfolio img {
+  border: 7px inset silver;
+}
+
+.type-portfolio img:hover {
+  border: 7px inset #3399FF;
+}
+
+.type-portfolio p.entry-meta {
+  visibility: hidden;
 }
 
 
@@ -1725,16 +1748,14 @@ Font Awesome Secondary Menu
   .genesis-nav-menu .menu-item:before,
     .site-header .genesis-nav-menu .menu-item:before,
     .nav-secondary .genesis-nav-menu .menu-item:before {
-      font-size: 17px;
+      font-size: 14px;
       top: 7px;
       left: 7px;
     }
 
-
-
   .genesis-nav-menu li {
     border-right: 1px solid #ccc;
-    padding: 15px 3px 15px 15px;
+    padding: 15px 3px 15px 0;
   }
 
   li.search {
@@ -1777,6 +1798,32 @@ Font Awesome Secondary Menu
     width: 100%;
   }
 
+  .genesis-nav-menu .menu-item:hover > .sub-menu {
+    left: auto;
+    opacity: 1;
+    margin-top: 0;
+  }
+
+  .nav-primary .genesis-nav-menu .sub-menu a {
+    font-size: 14px;
+    color: #898989;
+  }
+
+  .sub-menu li {
+    margin-top: 45px;
+    border-right: none;
+    padding: 0;
+    float: left;
+    clear:left;
+  }
+    .sub-menu li:first-child{
+      margin-top:39px;
+    }
+
+    .genesis-nav-menu .sub-menu a:hover {
+      font-size: 14px;
+      color: #3399ff;
+    }
 }
 
 
@@ -1784,7 +1831,7 @@ Font Awesome Secondary Menu
   .genesis-nav-menu .menu-item:before,
   .site-header .genesis-nav-menu .menu-item:before,
   .nav-secondary .genesis-nav-menu .menu-item:before {
-    font-size: 16px;
+    font-size: 15px;
     top: 7px;
     left: 7px;
   }
@@ -1806,27 +1853,38 @@ Font Awesome Secondary Menu
     float: right;
   }
 
-   .search-form {
-    height: 39px;
+  .search-form {
+    float: right;
+    width: 100%;
+    height: 40px;
+    padding-left: 30px;
+    margin-top: -8px;
     margin-top: -7px;
-    padding: 0 40px 0;
   }
+
   .search-form input {
     margin: 0;
     padding: 0.45em 0 0.45em 0.7em;
   }
 
-  .genesis-nav-menu li {
+  /*.genesis-nav-menu li {
     border-right: 1px solid #ccc;
     padding: 15px 7px 15px 30px;
-  }
+  }*/
 
   .sub-menu li {
     margin-top: 45px;
     border-right: none;
     padding: 0;
-    float: left;
     clear:left;
+  }
+    .sub-menu li:first-child{
+      margin-top:39px;
+    }
+
+/*====================== portfolio =========================*/
+  .type-portfolio img {
+    height: auto;
   }
 
 }
@@ -1836,7 +1894,7 @@ Font Awesome Secondary Menu
 .genesis-nav-menu .menu-item:before,
   .site-header .genesis-nav-menu .menu-item:before,
   .nav-secondary .genesis-nav-menu .menu-item:before {
-    font-size: 17px;
+    font-size: 16px;
     top: 7px;
     left: 7px;
   }
@@ -1844,9 +1902,11 @@ Font Awesome Secondary Menu
 
   .genesis-nav-menu a {
     text-align: center;
+    font-size: 16px;
   }
 
   .search-form {
+    width: 140%;
     height: 39px;
     margin-top: -7px;
     padding: 0 40px 0;
@@ -1865,5 +1925,12 @@ Font Awesome Secondary Menu
   .sidebar-primary {
     width: 400px;
   }
+
+  /*==================== portfolio images ===================*/
+
+.type-portfolio img {
+  height: auto;
+}
+
 
  }
