--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ input[type="search"] {
 body {
   background-color: #ffffff;
   color: #333;
-  font-family: Raleway, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 300;
   line-height: 1.625;
@@ -202,6 +202,9 @@ i {
 
 blockquote {
 	margin: 40px;
+  background-color: #f5f5f5;
+  padding: 1em;
+  border-radius: 5px;
 }
 
 blockquote::before {
