fixed thumbnail size

--- a/style.css
+++ b/style.css
@@ -1341,6 +1341,10 @@ li.comment {
   visibility: hidden;
 }
 
+article.type-portfolio {
+  padding: 40px 30px;
+}
+
 
 /* # Footer Widgets
 ---------------------------------------------------------------------------------------------------- */
@@ -1568,6 +1572,8 @@ li.comment {
     padding: 40px;
   }
 
+
+
 }
 
 /* back to top button*/
@@ -1607,21 +1613,6 @@ li.comment {
   opacity:1;
 }
 
-  @media only screen and (min-width: 768px) {
-    .to-top {
-      right:20px;
-      bottom:20px;
-    }
-  }
-
-@media only screen and (min-width: 1024px) {
-	.to-top {
-    height:60px;
-    width:60px;
-    right:30px;
-    bottom:30px;
-  }
-}
 
 /*Font Awesome Primary Menu
 ---------------------------------------------------------------------------------------------------- */
@@ -1758,13 +1749,19 @@ Font Awesome Secondary Menu
 
   .genesis-nav-menu li {
     border-right: 1px solid #ccc;
-    padding: 15px 3px 15px 0;
+    padding: 15px 0 15px 15px;
   }
 
   li.search {
     border-right: 0;
     border-left: 0;
   }
+
+  .to-top {
+      right:20px;
+      bottom:20px;
+    }
+
 
   ul.social {
     margin-top: 2em;
@@ -1829,6 +1826,18 @@ Font Awesome Secondary Menu
     }
 }
 
+@media only screen and (min-width: 801px) {
+
+  .single .type-portfolio img {
+    height: auto;
+    width: 100%;
+  }
+    .type-portfolio img {
+      height: 100px;
+      width: 150px;
+    }
+}
+
 
 @media only screen and (min-width: 960px) {
   .genesis-nav-menu .menu-item:before,
@@ -1885,11 +1894,22 @@ Font Awesome Secondary Menu
       margin-top:39px;
     }
 
-/*====================== portfolio =========================*/
-  .type-portfolio img {
-    height: auto;
-  }
+  /*========================== portfolio ============================*/
 
+    .type-portfolio img {
+      height: 100px;
+      width: 150px;
+    }
+
+}
+
+@media only screen and (min-width: 1024px) {
+	.to-top {
+    height:60px;
+    width:60px;
+    right:30px;
+    bottom:30px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -1931,9 +1951,8 @@ Font Awesome Secondary Menu
 
   /*==================== portfolio images ===================*/
 
-.type-portfolio img {
-  height: auto;
+  .type-portfolio img {
+    height: 100px;
+  }
+
 }
-
-
- }
