--- a/style.css
+++ b/style.css
@@ -699,10 +699,12 @@ th {
 --------------------------------------------- */
 .slide-title-wht {
   color: #fff;
+  text-shadow: -2px -2px 0 #555;
 }
 
 .slide-title-blk {
-  color: #000;
+  color: #717171;
+  text-shadow: -1px -1px 0 #222;
 }
 .archive-title {
 	font-size: 20px;
@@ -737,6 +739,8 @@ th {
 .footer-widgets {
   border-top: 10px solid #3399ff;
 }
+
+
 
 /* ## WordPress
 --------------------------------------------- */
@@ -1982,4 +1986,23 @@ Font Awesome Secondary Menu
 
   }
 
+  /*----------------- Slides -------------*/
+
+  .rsDefaultInv, .rsDefaultInv .rsOverflow,
+  .rsDefaultInv .rsSlide,
+  .rsDefaultInv .rsVideoFrameHolder,
+  .rsDefaultInv .rsThumbs {
+    background-color: #fff;
+    -moz-box-shadow: inset 0 0 10px #333;
+    -webkit-box-shadow: inset 0 0 10px #333;
+    box-shadow: inset 0 0 10px #333;
+  }
+
+}
+
+@media only screen and (max-width: 480px) {
+  .royalSlider, .rsDefaultInv .rsOverflow {
+    display: none;
+    visibility: hidden;
+  }
 }
