--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ li {
 
 b,
 strong {
-	font-weight: 900;
+	font-weight: 700;
 }
 
 blockquote,
@@ -203,12 +203,12 @@ i {
 blockquote {
 	margin: 40px;
   background-color: #f5f5f5;
-  padding: 1em;
+  padding: 2em;
   border-radius: 5px;
 }
 
 blockquote::before {
-	content: "\201C";
+	content: " ";
 	display: block;
 	font-size: 30px;
 	height: 0;
@@ -976,7 +976,7 @@ img.alignright,
 .widget-area {
 	float: right;
 	text-align: left;
-	width: 400px;
+	width: 340px;
 }
 
 
@@ -1880,7 +1880,7 @@ Font Awesome Secondary Menu
   }
 
   .widget-area {
-    width: 400px;
+    width: 30%;
   }
   .sidebar-primary {
     width: 340px;
