--- a/style.css
+++ b/style.css
@@ -1891,7 +1891,7 @@ Font Awesome Secondary Menu
     float: right;
   }
 
-  .search-form {
+  .genesis-nav-menu > .search > .search-form {
     float: right;
     width: 100%;
     height: 40px;
@@ -1946,7 +1946,7 @@ Font Awesome Secondary Menu
     font-size: 16px;
   }
 
-  .search-form {
+  .genesis-nav-menu > .search > .search-form {
     width: 140%;
     height: 39px;
     margin-top: -7px;
